Fixed the alignment issue on lik editor

--- a/appcubator/static/css/app/editor/editor.less
+++ b/appcubator/static/css/app/editor/editor.less
@@ -2663,7 +2663,7 @@ ul.list {
 
 #navbar-editor .links-list {
   overflow-y: scroll;
-  height: 310px;
+  height: 306px;
 }
 
 #link-editors {
